# netfile

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test.txt
.claude/: settings.local.json
crates/netfile-cli/: Cargo.toml
crates/netfile-cli/src/: main.rs
crates/netfile-core/: Cargo.toml
crates/netfile-core/examples/: bench_transfer.rs  test_dual_nat_peer.rs  test_hole_punch.rs  test_signal_punch_transfer.rs  test_stun.rs  test_tls.rs
crates/netfile-core/src/: auth.rs  compression.rs  config.rs  hole_punch.rs  iroh_net.rs  lib.rs  message_store.rs  protocol.rs  signal_client.rs  stun.rs  tls.rs
crates/netfile-core/src/discovery/: discovery.rs  mod.rs  protocol.rs
crates/netfile-core/src/transfer/: directory.rs  file_transfer.rs  file_utils.rs  history.rs  mod.rs  progress.rs  service.rs  share.rs  state.rs  task_queue.rs
crates/netfile-core/tests/: integration_test.rs
crates/netfile-gui/: Cargo.toml  generate-icon.html  tauri.conf.json
crates/netfile-gui/icons/: icon.icns
crates/netfile-gui/src/: lib.rs  main.rs
crates/netfile-gui/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/netfile-gui/ui/src/: App.css  App.tsx  index.css
crates/netfile-gui/ui/src/components/: Chat.css  Chat.tsx  DeviceList.css  DeviceList.tsx  DeviceModal.css  DeviceModal.tsx  FileSender.css  FileSender.tsx  InviteDialog.css  InviteDialog.tsx  Settings.css  Settings.tsx  ShareBrowser.css  ShareBrowser.tsx  TransferHistory.css  TransferHistory.tsx  TransferQueue.css  TransferQueue.tsx
crates/netfile-signal/: Cargo.toml
crates/netfile-signal/src/: main.rs  protocol.rs  server.rs  stun_server.rs
crates/netfile-tui/: Cargo.toml
crates/netfile-tui/examples/: test_backend.rs
crates/netfile-tui/src/: main.rs
docker/double-nat/: Dockerfile.client  Dockerfile.nat  Dockerfile.signal  client-entrypoint.sh  docker-compose.yml  nat-entrypoint.sh  test.sh
docker/dual-nat/: Dockerfile.nat  Dockerfile.netfile  docker-compose.yml  nat-router.sh  peer-entrypoint.sh  run-test.ps1  run-test.sh
docs/: TUI使用指南.md
docs/指南/: 使用指南.md  安装指南.md  开发文档.md
docs/规范/: WebView渲染性能规范.md
docs/设计/: iroh改造NAT打洞与传输方案.md  iroh改造整个项目NAT打洞流程方案.md  webrtc-rs改造NAT打洞逻辑方案.md  webrtc改造整个项目NAT打洞与传输方案.md  内网文件传输系统设计方案.md  文件共享功能设计方案.md
docs/需求/: 功能规划.md  开发任务清单.md
