[workspace]
members = [
    "crates/netfile-core",
    "crates/netfile-cli",
    "crates/netfile-tui",
    "crates/netfile-gui",
    "crates/netfile-signal",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NetFile Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
zstd = "0.13"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2.2"
stun = "0.6"
ratatui = "0.29"
crossterm = "0.28"
bytes = "1.5"
