[package]
name = "netfile-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
bincode.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
zstd.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true
stun.workspace = true
bytes.workspace = true
quinn.workspace = true
hostname = "0.4"
dirs = "5.0"
crc32fast = "1.4"

[dev-dependencies]
tracing-subscriber.workspace = true
