[package]
name = "netfile-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = ["config-json5"] }

[dependencies]
netfile-core = { path = "../netfile-core" }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
uuid.workspace = true
dirs = "5.0"
rustls.workspace = true
zip = "2"
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
